--- a/css/style-header.css
+++ b/css/style-header.css
@@ -10,13 +10,14 @@
     --global-width: 95vw;
     --header-font-size: 1.2rem;
     --header-font-weight: 600;
-    --header-padding:20px 0;
-    --nav-menu-padding:10px 0;
-    --shopping-list-icon-scale:40px;
+    --header-padding: 20px;
+    --nav-menu-padding: 10px 0;
+    --shopping-list-icon-scale: 40px;
     --header-img-desc-wrapper-margin: 20px 0;
     --purchase-btn-padding: 10px 30px;
     --title-font-size: 3rem;
     --desc-font-size: 1.3rem;
+    --sub-menu-container-padding: 20px 0 50px 0;
 }
 /* global set */
 html{
@@ -27,6 +28,10 @@ body{
     width: 100%;
     height: 100%;
     overflow-x: hidden;
+    overflow-y: hidden;
+}
+body.active{
+    overflow-y: auto;
 }
 a{
     list-style: none;
@@ -46,7 +51,7 @@ button{
     top: 0;
     left: 0;
     background-color: white;
-    z-index: 100;
+    z-index: 200;
     width:100%;
     height: 100%;
     display: flex;
@@ -74,10 +79,13 @@ body.active .load-page{
 }
 /* header */
 .header-container{
+    position: relative;
+    z-index: 100;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: var(--header-padding);
+    background-color: var(--color-white);
 }
 .logo-img-container{
     width: auto;
@@ -101,7 +109,7 @@ body.active .load-page{
 .nav-menu:nth-child(1) .line-style{
     content: ' ';
     position: absolute;
-    top:95%;
+    height: 2px;
     left:0;
     right:100%;
     bottom:0;
@@ -250,6 +258,8 @@ body.active .load-page{
 }
 .img-title{
     font-weight: bold;
+    color: var(--color-white);
+    -webkit-text-stroke: 1px var(--color-black);
     font-size: var(--title-font-size);
 }
 .img-desc{
@@ -266,4 +276,61 @@ body.active .load-page{
 }
 .purchase-btn a:hover{
     background-color: var(--color-dark-gray);
+}
+.header-sub-menu{
+    position: relative;
+    font-weight: bold;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.header-sub-menu-container{
+    position: absolute;
+    z-index: 50;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--color-white);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: var(--sub-menu-container-padding);
+    transform: translateY(-100%);
+    transition: 0.5s;
+}
+.header-sub-menu-container.active{
+    transform: translateY(0);
+}
+.header-sub-menu li a{
+    font-weight: normal;
+    color: var(--color-dark-gray);
+}
+.header-sub-menu li a:hover{
+    color: var(--color-black);
+}
+.header-sub-menu a li:nth-child(1){
+    margin-top: 20px;
+}
+.modal{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    pointer-events: none;
+    transition: 0.3s;
+}
+.modal.active {
+    z-index: 10;
+    pointer-events: visible;
+    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.2);
+}
+.observe-ready{
+    opacity: 0;
+    transform: translateX(10%);
+    transition: 1s;
+}
+.observe-ready.active{
+    opacity: 1;
+    transform: translateX(0);
 }
